--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -1,22 +1,38 @@
 spring.datasource.driver-class-name.1=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url.1=jdbc:sqlserver://localhost:1433;databaseName=belajar
+spring.datasource.url.1=jdbc:sqlserver://10.50.166.157:1433;databaseName=belajar
 spring.datasource.username.1=sa
-spring.datasource.password.1=Gruposalinas2018
+spring.datasource.password.1=gruposalinas2019
 
 
 
 
 
-spring.datasource.driver-class-name.2=oracle.jdbc.driver.OracleDriver
-spring.datasource.url.2=jdbc:oracle:thin:@localhost:1521:advertiser
-spring.datasource.username.2=system
-spring.datasource.password.2=Gruposalinas2019
+spring.datasource.driver-class-name.2=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url.2=jdbc:sqlserver://10.50.166.157:1433;databaseName=belajar
+spring.datasource.username.2=sa
+spring.datasource.password.2=gruposalinas2019
 
 
 
 
 
-spring.datasource.driver-class-name.3=com.ibm.as400.access.AS400JDBCDriver
-spring.datasource.url.3=jdbc:as400://10.50.109.200/EKT5DES
-spring.datasource.username.3=b345310
-spring.datasource.password.3=mercuri0
+spring.datasource.driver-class-name.3=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url.3=jdbc:sqlserver://10.50.166.157:1433;databaseName=belajar
+spring.datasource.username.3=sa
+spring.datasource.password.3=gruposalinas2019
+
+
+
+#spring.datasource.driver-class-name.2=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url.2=jdbc:oracle:thin:@localhost:1521:advertiser
+#spring.datasource.username.2=system
+#spring.datasource.password.2=Gruposalinas2019
+
+
+
+
+
+#spring.datasource.driver-class-name.3=com.ibm.as400.access.AS400JDBCDriver
+#spring.datasource.url.3=jdbc:as400://10.50.109.200/EKT5DES
+#spring.datasource.username.3=b345310
+#spring.datasource.password.3=mercuri0
